--- a/frontend/src/app/themes/guardian/variables.scss
+++ b/frontend/src/app/themes/guardian/variables.scss
@@ -62,6 +62,7 @@
     --guardian-page-header-font-weight: 600;
     --guardian-page-header-height: 72px;
     --guardian-page-header-padding: 32px 0px 18px 0px;
+    --guardian-page-header-gap: 40px;
     --guardian-page-toolbar-height: 56px;
     --guardian-page-toolbar-gap: 40px;
     --guardian-page-content-padding: 0px;
